Added title to links

--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
         <div class="title">Connect with me!</div>
 
         <div class="contact">
-            <a href="mailto: himadrishah2000@gmail.com"><i class="fas fa-envelope-square"></i></a>
-            <a href="https://linkedin.com/in/himadri2110" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com/himadri2110" target="_blank"><i class="fab fa-github-square"></i></a>
-            <a href="https://twitter.com/himadri2110" target="_blank"><i class="fab fa-twitter-square"></i></a>
+            <a href="mailto: himadrishah2000@gmail.com" title="Email"><i class="fas fa-envelope-square"></i></a>
+            <a href="https://linkedin.com/in/himadri2110" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/himadri2110" target="_blank" title="GitHub"><i class="fab fa-github-square"></i></a>
+            <a href="https://twitter.com/himadri2110" target="_blank" title="Twitter"><i class="fab fa-twitter-square"></i></a>
         </div>
 
         <div class="footer">
