feat: Added project

--- a/projects.html
+++ b/projects.html
@@ -42,6 +42,15 @@
 
         <div class="project">
             <div class="wrapper">
+                <div class="name">Learn Triangles</div>
+                <div class="details">Small fun quizzes on triangles.</div>
+                <div class="button-div">
+                    <a href="https://marktwelve-triangles.netlify.app/" target="_blank"><button>Live</button></button></a>
+                    <a href="https://github.com/himadri2110/learn-triangles" target="_blank"><button>Source</button></button></a>
+                </div>
+            </div>
+
+            <div class="wrapper">
                 <div class="name">Hey foodie!</div>
                 <div class="details">A web app which gives a list of food items based on chosen cuisine. It is made with React</div>
                 <div class="button-div">
