Feat: Added projects, skills, svg and changed styling

--- a/blogs.html
+++ b/blogs.html
@@ -37,6 +37,10 @@
         </div> -->
     </nav>
 
+    <div class="intro blog-intro">
+        <img src="./undraw_blog.svg" alt="Blog">
+    </div>
+
     <div class="blog-section">
         <div class="title">Checkout my blogs...</div>
 
