--- a/projects.html
+++ b/projects.html
@@ -37,16 +37,56 @@
         </div> -->
     </nav>
 
+    <div class="intro project-intro">
+        <img src="./undraw_project.svg" alt="Project">
+    </div>
+
     <div class="project-section">
         <div class="title">Checkout my projects...</div>
 
         <div class="project">
             <div class="wrapper">
+                <div class="name">Stocks yay or nay?</div>
+                <div class="details">A web app which takes the price of stocks while purchasing and current price along with the number of stocks and tells how much profit/loss you earned.</div>
+                <div class="button-div">
+                    <a href="https://markfourteen-stocks.netlify.app/" target="_blank"><button>Live</button></button></a>
+                    <a href="https://github.com/himadri2110/neoG-markFourteen" target="_blank"><button>Source</button></button></a>
+                </div>
+            </div>
+
+            <div class="wrapper">
+                <div class="name">Palindrome Birthday</div>
+                <div class="details">A web app which tells you if your birthdate is palindrome or not. If not, it returns the nearest palindrome date from your birthdate.</div>
+                <div class="button-div">
+                    <a href="https://markthirteen-palindromebday.netlify.app/" target="_blank"><button>Live</button></button></a>
+                    <a href="https://github.com/himadri2110/neoG-markThirteen" target="_blank"><button>Source</button></button></a>
+                </div>
+            </div>
+
+            <div class="wrapper">
                 <div class="name">Learn Triangles</div>
-                <div class="details">Small fun quizzes on triangles.</div>
+                <div class="details">Small fun quizzes on triangles. It allows the user to calculate area, hypotenuse, find third angle, etc.</div>
                 <div class="button-div">
                     <a href="https://marktwelve-triangles.netlify.app/" target="_blank"><button>Live</button></button></a>
                     <a href="https://github.com/himadri2110/learn-triangles" target="_blank"><button>Source</button></button></a>
+                </div>
+            </div>
+
+            <div class="wrapper">
+                <div class="name">Lucky Birthday</div>
+                <div class="details">A web app which which takes your birthdate and lucky number and tells if your birthdate is lucky or not.</div>
+                <div class="button-div">
+                    <a href="https://markeleven-luckybday.netlify.app/" target="_blank"><button>Live</button></button></a>
+                    <a href="https://github.com/himadri2110/neoG-markEleven" target="_blank"><button>Source</button></button></a>
+                </div>
+            </div>
+
+            <div class="wrapper">
+                <div class="name">Cash Register</div>
+                <div class="details">A web app which takes the bill amount and the cash paid and tells the minimum number of notes to be returned.</div>
+                <div class="button-div">
+                    <a href="https://markten-cashregister.netlify.app/ " target="_blank"><button>Live</button></button></a>
+                    <a href="https://github.com/himadri2110/neoG-markTen" target="_blank"><button>Source</button></button></a>
                 </div>
             </div>
 
@@ -61,7 +101,7 @@
 
             <div class="wrapper">
                 <div class="name">Know your fruit!</div>
-                <div class="details">A web app which identifies the fruit upon entering the emoji and also on clicking the emoji. It is made with React.</div>
+                <div class="details">A web app which identifies the fruit upon entering the emoji. It is made with React.</div>
                 <div class="button-div">
                     <a href="https://m4ule.csb.app/" target="_blank"><button>Live</button></button></a>
                     <a href="https://github.com/himadri2110/neoG-markEight" target="_blank"><button>Source</button></button></a>
@@ -105,21 +145,12 @@
             </div>
 
             <div class="wrapper">
-                <div class="name">Library</div>
-                <div class="details">A web app that lets the user store their favourite books along with its details into a virtual library. Users can mark the book as read and remove it as well.</div>
+                <div class="name">Calculator</div>
+                <div class="details">A calculator web app that lets the user perform mathematical calculations.</div>
                 <div class="button-div">
-                    <a href="https://himadri-library.netlify.app/" target="_blank"><button>Live</button></button></a>
-                    <a href="https://github.com/himadri2110/vanillaJS/tree/main/Library" target="_blank"><button>Source</button></button></a>
+                    <a href="https://himadri-calculator.netlify.app/" target="_blank"><button>Live</button></button></a>
+                    <a href="https://github.com/himadri2110/vanillaJS/tree/main/Calculator" target="_blank"><button>Source</button></button></a>
                 </div> 
-            </div>
-
-            <div class="wrapper">
-                <div class="name">To do list</div>
-                <div class="details">A web app that allows the users to enter their To Do Tasks, mark the task as completed, remove task from list. User can also filter completed and pending tasks.</div>
-                <div class="button-div">
-                    <a href="https://himadri-todo-list.netlify.app/" target="_blank"><button>Live</button></button></a>
-                    <a href="https://github.com/himadri2110/vanillaJS/tree/main/To%20Do%20List" target="_blank"><button>Source</button></button></a>
-                </div>
             </div>
 
             <div class="wrapper">
@@ -140,6 +171,23 @@
                 </div>
             </div>
 
+            <div class="wrapper">
+                <div class="name">Library</div>
+                <div class="details">A web app that lets the user store their favourite books along with its details into a virtual library. Users can mark the book as read and remove it as well.</div>
+                <div class="button-div">
+                    <a href="https://himadri-library.netlify.app/" target="_blank"><button>Live</button></button></a>
+                    <a href="https://github.com/himadri2110/vanillaJS/tree/main/Library" target="_blank"><button>Source</button></button></a>
+                </div> 
+            </div>
+
+            <div class="wrapper">
+                <div class="name">To do list</div>
+                <div class="details">A web app that allows the users to enter their To Do Tasks, mark the task as completed, remove task from list. User can also filter completed and pending tasks.</div>
+                <div class="button-div">
+                    <a href="https://himadri-todo-list.netlify.app/" target="_blank"><button>Live</button></button></a>
+                    <a href="https://github.com/himadri2110/vanillaJS/tree/main/To%20Do%20List" target="_blank"><button>Source</button></button></a>
+                </div>
+            </div>
         </div>
     </div>
 
