Feat: Added a blog

--- a/blogs.html
+++ b/blogs.html
@@ -54,23 +54,14 @@
         </div>
 
         <div class="blog">
-            <div class="name">Dummy Blog 1</div>
+            <div class="name">11 non-coding tools I use every day!</div>
             <div class="content">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ratione minus soluta aliquid quis voluptatum provident facere corporis officiis, veritatis ipsa explicabo vitae at odit ex mollitia rem illo minima!
+                Dev life isn't just about writing code all the time. It also includes using the apt tools and resources that can make your job easy! So, I'm gonna reveal my go-to tools/websites for a specific task that I use daily, and they make my life hassle-free. Let's dive in!
                 <br>
-                <a href="#" target="_blank"><button>Read More</button></a>
+                <a href="https://himadrishah.hashnode.dev/11-non-coding-tools-i-use-almost-every-day" target="_blank"><button>Read More</button></a>
             </div>
         </div>
-        
-        <div class="blog">
-            <div class="name">Dummy Blog 2</div>
-            <div class="content">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ratione minus soluta aliquid quis voluptatum provident facere corporis officiis, veritatis ipsa explicabo vitae at odit ex mollitia rem illo minima!
-                <br>
-                <a href="#" target="_blank"><button>Read More</button></a>
             </div>
-        </div>
-    </div>
 
     <div class="contact-section">
         <div class="title">Connect with me!</div>
