feat: Added project images, separate blog pages, changed styling

--- a/blogs.html
+++ b/blogs.html
@@ -38,30 +38,38 @@
     </nav>
 
     <div class="intro blog-intro">
-        <img src="./undraw_blog.svg" alt="Blog">
+        <img src="./img/undraw_blog.svg" alt="Blog">
     </div>
 
     <div class="blog-section">
         <div class="title">Checkout my blogs...</div>
 
         <div class="blog">
-            <div class="name">Movie App using JavaScript</div>
+            <div class="name">11 non-coding tools I use almost every day!</div>
+
+            <small>July, 2021 &nbsp; <span class="mark">mark15</span></small>
+
             <div class="content">
-                The pandemic has made us all stay indoors for most of the day, which is why we need some entertainment activities that can refresh us while continuing to stay indoors. So, I thought of building a Movie App that can give me a list of movies and their details upon searching for it.
+                Dev life isn't just about writing code all the time. It also includes using the apt tools and resources that can make your job easy! So, I'm gonna reveal my go-to tools/websites for a specific task that I use daily, and they make my life hassle-free. Let's dive in!
                 <br>
-                <a href="https://himadrishah.hashnode.dev/build-a-movie-app-using-themoviedb-api" target="_blank"><button>Read More</button></a>
+                <a href="https://himadrishah.hashnode.dev/11-non-coding-tools-i-use-almost-every-day" target="_blank"><button>Hashnode<i class="fas fa-external-link-alt"></i></button></a>
+                <a href="./blog-two.html" target="_blank"><button class="read-now">Read Now</button></a>
             </div>
         </div>
 
         <div class="blog">
-            <div class="name">11 non-coding tools I use every day!</div>
+            <div class="name">Build a Movie App using TheMovieDb API</div>
+
+            <small>June, 2021 &nbsp; <span class="mark">mark15</span></small>
+
             <div class="content">
-                Dev life isn't just about writing code all the time. It also includes using the apt tools and resources that can make your job easy! So, I'm gonna reveal my go-to tools/websites for a specific task that I use daily, and they make my life hassle-free. Let's dive in!
+                The pandemic has made us all stay indoors for most of the day, which is why we need some entertainment activities that can refresh us while continuing to stay indoors. So, I thought of building a Movie App that can give me a list of movies and their details upon searching for it.
                 <br>
-                <a href="https://himadrishah.hashnode.dev/11-non-coding-tools-i-use-almost-every-day" target="_blank"><button>Read More</button></a>
+                <a href="https://himadrishah.hashnode.dev/build-a-movie-app-using-themoviedb-api" target="_blank"><button>Hashnode<i class="fas fa-external-link-alt"></i></button></a>
+                <a href="./blog-one.html" target="_blank"><button class="read-now">Read Now</button></a>
             </div>
         </div>
-            </div>
+    </div>
 
     <div class="contact-section">
         <div class="title">Connect with me!</div>
