fix: fixed links and title

--- a/blog-one.html
+++ b/blog-one.html
@@ -16,17 +16,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
 
-    <title>Document</title>
+    <title>Build a Movie App using TheMovieDb API</title>
 </head>
 
 <body>
-    
+
     <nav>
         <ul class="nav-links">
-            <li><a onclick="window.location='index.html'">Home</a></li>
+            <li><a onclick="window.location.href='index.html'">Home</a></li>
             <!-- <li><a onclick="jumpToDiv('about')">About Me</a></li> -->
-            <li><a onclick="window.location='projects.html'">Projects</a></li>
-            <li><a href="#" style="border-bottom: 2px solid var(--blue);">Blogs</a></li>
+            <li><a onclick="window.location.href='projects.html'">Projects</a></li>
+            <li><a onclick="window.location.href='blogs.html'" style="border-bottom: 2px solid var(--blue);">Blogs</a></li>
             <!-- <li><a onclick="jumpToDiv('contact')">Contact</a></li> -->
         </ul>
 
@@ -36,7 +36,6 @@
             <div class="line3"></div>
         </div> -->
     </nav>
-
 
     <div class="blog-wrapper">
 
