--- a/blogs.html
+++ b/blogs.html
@@ -23,9 +23,9 @@
     
     <nav>
         <ul class="nav-links">
-            <li><a onclick="window.location='index.html'">Home</a></li>
+            <li><a onclick="window.location.href='index.html'">Home</a></li>
             <!-- <li><a onclick="jumpToDiv('about')">About Me</a></li> -->
-            <li><a onclick="window.location='projects.html'">Projects</a></li>
+            <li><a onclick="window.location.href='projects.html'">Projects</a></li>
             <li><a href="#" style="border-bottom: 2px solid var(--blue);">Blogs</a></li>
             <!-- <li><a onclick="jumpToDiv('contact')">Contact</a></li> -->
         </ul>
