--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <ul class="nav-links">
             <li><a href="#" style="border-bottom: 2px solid var(--blue);">Home</a></li>
             <!-- <li><a onclick="jumpToDiv('about')">About Me</a></li> -->
-            <li><a onclick="window.location='projects.html'">Projects</a></li>
-            <li><a onclick="window.location='blogs.html'">Blogs</a></li>
+            <li><a onclick="window.location.href='projects.html'">Projects</a></li>
+            <li><a onclick="window.location.href='blogs.html'">Blogs</a></li>
             <!-- <li><a onclick="jumpToDiv('contact')">Contact</a></li> -->
         </ul>
 
