--- a/projects.html
+++ b/projects.html
@@ -23,10 +23,10 @@
     
     <nav>
         <ul class="nav-links">
-            <li><a onclick="window.location='index.html'">Home</a></li>
+            <li><a onclick="window.location.href='index.html'">Home</a></li>
             <!-- <li><a onclick="jumpToDiv('about')">About Me</a></li> -->
             <li><a href="#" style="border-bottom: 2px solid var(--blue);">Projects</a></li>
-            <li><a onclick="window.location='blogs.html'">Blogs</a></li>
+            <li><a onclick="window.location.href='blogs.html'">Blogs</a></li>
             <!-- <li><a onclick="jumpToDiv('contact')">Contact</a></li> -->
         </ul>
 
