feat: added about page

--- a/about.html
+++ b/about.html
@@ -19,7 +19,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
 
-    <title>Blogs | Himadri Shah</title>
+    <!-- DevIcon -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.12.0/devicon.min.css">
+
+    <title>Himadri Shah</title>
 </head>
 
 <body>
@@ -27,9 +30,9 @@
     <nav>
         <ul class="nav-links">
             <li><a onclick="window.location.href='index.html'">Home</a></li>
-            <li><a onclick="window.location.href='about.html'">About</a></li>
+            <li><a href="#" style="border-bottom: 2px solid var(--blue);">About</a></li>
             <li><a onclick="window.location.href='projects.html'">Projects</a></li>
-            <li><a href="#" style="border-bottom: 2px solid var(--blue);">Blogs</a></li>
+            <li><a onclick="window.location.href='blogs.html'">Blogs</a></li>
             <!-- <li><a onclick="jumpToDiv('contact')">Contact</a></li> -->
         </ul>
 
@@ -40,37 +43,35 @@
         </div> -->
     </nav>
 
-    <div class="intro blog-intro">
-        <img src="./img/undraw_blog.svg" alt="Blog">
+    <div class="intro about-intro">
+        <img src="./img/undraw_about.svg" alt="About Me">
     </div>
 
-    <div class="blog-section">
-        <div class="title">Checkout my blogs...</div>
+    <div class="about-section">
+        <div class="title">About Me...</div>
 
-        <div class="blog">
-            <div class="name">11 non-coding tools I use almost every day!</div>
+        <div class="hr"><hr></div>
 
-            <small>July, 2021 &nbsp; <span class="mark">mark15</span></small>
+        <div class="text">
+            <p>I am pursuing B.E. I.T. at V.V.P. Engineering College (affiliated to Gujarat Technological University), Rajkot. I am currently enrolled in the final year of Engineering.</p>
 
-            <div class="content">
-                Dev life isn't just about writing code all the time. It also includes using the apt tools and resources that can make your job easy! So, I'm gonna reveal my go-to tools/websites for a specific task that I use daily, and they make my life hassle-free. Let's dive in!
-                <br>
-                <a href="https://himadrishah.hashnode.dev/11-non-coding-tools-i-use-almost-every-day" target="_blank"><button>Hashnode<i class="fas fa-external-link-alt"></i></button></a>
-                <a href="./blog-two.html" target="_blank"><button class="read-now">Read Now</button></a>
-            </div>
-        </div>
+            <p>My Web Development journey started back in 2020, during the pandemic. I started exploring various domains to find what suits me the best. </p>
 
-        <div class="blog">
-            <div class="name">Build a Movie App using TheMovieDb API</div>
+            <p>Initially, I started off with learning Python and also did a couple of Coursera courses. After a month or so, I dived into competitve programming using Python, as everyone else was doing it.</p>
 
-            <small>June, 2021 &nbsp; <span class="mark">mark15</span></small>
+            <p>Then I started looking for career opportunities in Python, and found out mostly about AI, ML, Pattern Recognition, Data Analytics, etc. I was sure to not have any interest in those domains.</p>
 
-            <div class="content">
-                The pandemic has made us all stay indoors for most of the day, which is why we need some entertainment activities that can refresh us while continuing to stay indoors. So, I thought of building a Movie App that can give me a list of movies and their details upon searching for it.
-                <br>
-                <a href="https://himadrishah.hashnode.dev/build-a-movie-app-using-themoviedb-api" target="_blank"><button>Hashnode<i class="fas fa-external-link-alt"></i></button></a>
-                <a href="./blog-one.html" target="_blank"><button class="read-now">Read Now</button></a>
-            </div>
+            <p>That's when I knew I had to look out for something else, and luckily, I stummbled upon web dev!</p>
+
+            <p>In the initial days, I just used to binge watch YouTube videos, without implementing anything, and ofcourse I wasn't getting any output. Then I saw a post on LinkedIn, answering my query. That's when I realized that making projects and implementing your learning is the the most crucial part of web dev.</p>
+
+            <p>Fast forward to mid-2021, I have a mix of some good major and minor projects where I have implemented my learnings and I no more feel like a beginner.</p>
+
+            <p>I am proficient in HTML, CSS, Bootstrap and currently exploring JavaScript and React.js</p>
+
+            <p>I wish to continue this journey, push my limits and see what life has in store for me!</p>
+
+            <p>Cheers!</p>
         </div>
     </div>
 
@@ -93,6 +94,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
     <script src="./main.js"></script>
-    
+
 </body>
+
 </html>
