--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <nav>
         <ul class="nav-links">
             <li><a href="#" style="border-bottom: 2px solid var(--blue);">Home</a></li>
-            <!-- <li><a onclick="jumpToDiv('about')">About Me</a></li> -->
+            <li><a onclick="window.location.href='about.html'">About</a></li>
             <li><a onclick="window.location.href='projects.html'">Projects</a></li>
             <li><a onclick="window.location.href='blogs.html'">Blogs</a></li>
             <!-- <li><a onclick="jumpToDiv('contact')">Contact</a></li> -->
@@ -53,8 +53,7 @@
         <img src="./img/undraw_working_late_pukg.svg" alt="Girl Working">
     </div>
 
-
-    <div class="about-section">
+    <div class="about-section-home">
         <div class="title">About Me</div>
 
         <div class="hr"><hr></div>
@@ -65,7 +64,9 @@
             <div class="text">
                 <p>Hey all! 👋</p>
                 
-                <p>I'm Himadri Shah, a final year undergrad student, pursuing B.E. I.T. at V.V.P. Engineering College (affiliated to Gujarat Technological University), Rajkot. My field of interest includes Web Development, specifically, Front-end. I am proficient in HTML, CSS, Bootstrap and currently exploring JavaScript and React.</p>
+                <p>I'm Himadri Shah, a final year undergrad student. My field of interest includes Web Development, specifically, Front-end. I am proficient in HTML, CSS, Bootstrap and currently exploring JavaScript and React.</p>
+
+                <a href="about.html"><button>More about me</button></a>
             </div>
         </div>
     </div>
