--- a/blog-two.html
+++ b/blog-two.html
@@ -27,7 +27,7 @@
     <nav>
         <ul class="nav-links">
             <li><a onclick="window.location.href='index.html'">Home</a></li>
-            <!-- <li><a onclick="jumpToDiv('about')">About Me</a></li> -->
+            <li><a onclick="window.location.href='about.html'">About</a></li>
             <li><a onclick="window.location.href='projects.html'">Projects</a></li>
             <li><a onclick="window.location.href='blogs.html'" style="border-bottom: 2px solid var(--blue);">Blogs</a></li>
             <!-- <li><a onclick="jumpToDiv('contact')">Contact</a></li> -->
