--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
     <nav>
         <ul class="nav-links">
             <li><a onclick="window.location.href='index.html'">Home</a></li>
-            <!-- <li><a onclick="jumpToDiv('about')">About Me</a></li> -->
+            <li><a onclick="window.location.href='about.html'">About</a></li>
             <li><a href="#" style="border-bottom: 2px solid var(--blue);">Projects</a></li>
             <li><a onclick="window.location.href='blogs.html'">Blogs</a></li>
             <!-- <li><a onclick="jumpToDiv('contact')">Contact</a></li> -->
@@ -152,7 +152,7 @@
 
             <div class="wrapper">
                 <div class="image">
-                    <img src="./img/fruit-interpreter.png" alt="Fruit Interpreter">
+                    <img src="./img/fruit.png" alt="Fruit Interpreter">
                 </div>
 
                 <div class="project-text">
