changed svg, styling

--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
     </div>
 
     <div class="about-section">
-        <div class="title">About Me...</div>
+        <div class="title">About Me</div>
 
         <div class="hr"><hr></div>
 
@@ -67,9 +67,7 @@
 
             <p>Fast forward to mid-2021, I have a mix of some good major and minor projects where I have implemented my learnings and I no more feel like a beginner.</p>
 
-            <p>I am proficient in HTML, CSS, Bootstrap and currently exploring JavaScript and React.js</p>
-
-            <p>I wish to continue this journey, push my limits and see what life has in store for me!</p>
+            <p>I wish to enjoy this journey along with gaining and imparting knowledge, push my limits and see what life has in store for me!</p>
 
             <p>Cheers!</p>
         </div>
