--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 
                 <p>I'm Himadri Shah, a final year undergrad student. My field of interest includes Web Development, specifically, Front-end. I am proficient in HTML, CSS, Bootstrap and currently exploring JavaScript and React.</p>
 
-                <a href="about.html"><button>More about me</button></a>
+                <a href="about.html"><button>More About Me</button></a>
             </div>
         </div>
     </div>
