--- a/blogs.html
+++ b/blogs.html
@@ -56,7 +56,7 @@
                 Dev life isn't just about writing code all the time. It also includes using the apt tools and resources that can make your job easy! So, I'm gonna reveal my go-to tools/websites for a specific task that I use daily, and they make my life hassle-free. Let's dive in!
                 <br>
                 <a href="https://himadrishah.hashnode.dev/11-non-coding-tools-i-use-almost-every-day" target="_blank"><button>Hashnode<i class="fas fa-external-link-alt"></i></button></a>
-                <a href="./blog-two.html" target="_blank"><button class="read-now">Read Now</button></a>
+                <a href="./blog-two.html" target="_blank"><button class="read-now">Read More</button></a>
             </div>
         </div>
 
@@ -69,7 +69,7 @@
                 The pandemic has made us all stay indoors for most of the day, which is why we need some entertainment activities that can refresh us while continuing to stay indoors. So, I thought of building a Movie App that can give me a list of movies and their details upon searching for it.
                 <br>
                 <a href="https://himadrishah.hashnode.dev/build-a-movie-app-using-themoviedb-api" target="_blank"><button>Hashnode<i class="fas fa-external-link-alt"></i></button></a>
-                <a href="./blog-one.html" target="_blank"><button class="read-now">Read Now</button></a>
+                <a href="./blog-one.html" target="_blank"><button class="read-now">Read More</button></a>
             </div>
         </div>
     </div>
