feat: scrollToTop button to all pages

--- a/about.html
+++ b/about.html
@@ -1,42 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta name="author" content="Himadri Shah">
-    <meta name="description" content="Personal Portfolio of Himadri Shah">
-    <meta name="keywords" content="Portfolio, Web Development">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta name="author" content="Himadri Shah" />
+    <meta name="description" content="Personal Portfolio of Himadri Shah" />
+    <meta name="keywords" content="Portfolio, Web Development" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
 
     <!-- Font Awesome Downloaded -->
-    <link rel="stylesheet" href="all.min.css">
+    <link rel="stylesheet" href="all.min.css" />
 
     <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- DevIcon -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.12.0/devicon.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.12.0/devicon.min.css"
+    />
 
     <title>Himadri Shah</title>
-</head>
+  </head>
 
-<body>
-    
+  <body>
     <nav>
-        <ul class="nav-links">
-            <li><a onclick="window.location.href='index.html'">Home</a></li>
-            <li><a href="#" style="border-bottom: 2px solid var(--blue);">About</a></li>
-            <li><a onclick="window.location.href='projects.html'">Projects</a></li>
-            <li><a onclick="window.location.href='blogs.html'">Blogs</a></li>
-            <!-- <li><a onclick="jumpToDiv('contact')">Contact</a></li> -->
-        </ul>
+      <ul class="nav-links">
+        <li><a onclick="window.location.href='index.html'">Home</a></li>
+        <li>
+          <a href="#" style="border-bottom: 2px solid var(--blue)">About</a>
+        </li>
+        <li><a onclick="window.location.href='projects.html'">Projects</a></li>
+        <li><a onclick="window.location.href='blogs.html'">Blogs</a></li>
+        <!-- <li><a onclick="jumpToDiv('contact')">Contact</a></li> -->
+      </ul>
 
-        <!-- <div class="burger">
+      <!-- <div class="burger">
             <div class="line1"></div>
             <div class="line2"></div>
             <div class="line3"></div>
@@ -44,55 +54,101 @@
     </nav>
 
     <div class="intro about-intro">
-        <img src="./img/undraw_about.svg" alt="About Me">
+      <img src="./img/undraw_about.svg" alt="About Me" />
     </div>
 
     <div class="about-section">
-        <div class="title">About Me</div>
+      <div class="title">About Me</div>
 
-        <div class="hr"><hr></div>
+      <div class="hr"><hr /></div>
 
-        <div class="text">
-            <p>I am pursuing B.E. I.T. at V.V.P. Engineering College (affiliated to Gujarat Technological University), Rajkot. I am currently enrolled in the final year of Engineering.</p>
+      <div class="text">
+        <p>
+          I am pursuing B.E. I.T. at V.V.P. Engineering College (affiliated to
+          Gujarat Technological University), Rajkot. I am currently enrolled in
+          the final year of Engineering.
+        </p>
 
-            <p>My Web Development journey started back in 2020, during the pandemic. I started exploring various domains to find what suits me the best. </p>
+        <p>
+          My Web Development journey started back in 2020, during the pandemic.
+          I started exploring various domains to find what suits me the best.
+        </p>
 
-            <p>Initially, I started off with learning Python and also did a couple of Coursera courses. After a month or so, I dived into competitve programming using Python, as everyone else was doing it.</p>
+        <p>
+          Initially, I started off with learning Python and also did a couple of
+          Coursera courses. After a month or so, I dived into competitve
+          programming using Python, as everyone else was doing it.
+        </p>
 
-            <p>Then I started looking for career opportunities in Python, and found out mostly about AI, ML, Pattern Recognition, Data Analytics, etc. I was sure to not have any interest in those domains.</p>
+        <p>
+          Then I started looking for career opportunities in Python, and found
+          out mostly about AI, ML, Pattern Recognition, Data Analytics, etc. I
+          was sure to not have any interest in those domains.
+        </p>
 
-            <p>That's when I knew I had to look out for something else, and luckily, I stummbled upon web dev!</p>
+        <p>
+          That's when I knew I had to look out for something else, and luckily,
+          I stummbled upon web dev!
+        </p>
 
-            <p>In the initial days, I just used to binge watch YouTube videos, without implementing anything, and ofcourse I wasn't getting any output. Then I saw a post on LinkedIn, answering my query. That's when I realized that making projects and implementing your learning is the the most crucial part of web dev.</p>
+        <p>
+          In the initial days, I just used to binge watch YouTube videos,
+          without implementing anything, and ofcourse I wasn't getting any
+          output. Then I saw a post on LinkedIn, answering my query. That's when
+          I realized that making projects and implementing your learning is the
+          the most crucial part of web dev.
+        </p>
 
-            <p>Fast forward to mid-2021, I have a mix of some good major and minor projects where I have implemented my learnings and I no more feel like a beginner.</p>
+        <p>
+          Fast forward to mid-2021, I have a mix of some good major and minor
+          projects where I have implemented my learnings and I no more feel like
+          a beginner.
+        </p>
 
-            <p>I wish to enjoy this journey along with gaining and imparting knowledge, push my limits and see what life has in store for me!</p>
+        <p>
+          I wish to enjoy this journey along with gaining and imparting
+          knowledge, push my limits and see what life has in store for me!
+        </p>
 
-            <p>Cheers!</p>
-        </div>
+        <p>Cheers!</p>
+      </div>
     </div>
 
     <div class="contact-section">
-        <div class="title">Connect with me!</div>
+      <div class="title">Connect with me!</div>
 
-        <div class="contact">
-            <a href="mailto: himadrishah2000@gmail.com" title="Email"><i class="fas fa-envelope-square"></i></a>
-            <a href="https://linkedin.com/in/himadri2110" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com/himadri2110" target="_blank" title="GitHub"><i class="fab fa-github-square"></i></a>
-            <a href="https://twitter.com/himadri2110" target="_blank" title="Twitter"><i class="fab fa-twitter-square"></i></a>
-        </div>
+      <div class="contact">
+        <a href="mailto: himadrishah2000@gmail.com" title="Email"
+          ><i class="fas fa-envelope-square"></i
+        ></a>
+        <a
+          href="https://linkedin.com/in/himadri2110"
+          target="_blank"
+          title="LinkedIn"
+          ><i class="fab fa-linkedin"></i
+        ></a>
+        <a href="https://github.com/himadri2110" target="_blank" title="GitHub"
+          ><i class="fab fa-github-square"></i
+        ></a>
+        <a
+          href="https://twitter.com/himadri2110"
+          target="_blank"
+          title="Twitter"
+          ><i class="fab fa-twitter-square"></i
+        ></a>
+      </div>
 
-        <div class="footer">
-            Made with 💚 by <u>Himadri Shah</u>
-        </div>
+      <div class="footer">Made with 💚 by <u>Himadri Shah</u></div>
+    </div>
+
+    <!-- Scroll to Top -->
+    <div class="scroll-to-top">
+      <i class="fas fa-chevron-circle-up" onclick="scrollToTop()"></i>
     </div>
 
     <!-- jQuery CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
     <script src="./main.js"></script>
-
-</body>
-
+  </body>
 </html>
