--- a/index.html
+++ b/index.html
@@ -207,9 +207,7 @@
 
     <!-- Scroll to Top -->
     <div class="scroll-to-top">
-      <button onclick="scrollToTop()">
-        <i class="fas fa-chevron-circle-up"></i>
-      </button>
+      <i class="fas fa-chevron-circle-up" onclick="scrollToTop()"></i>
     </div>
 
     <!-- jQuery CDN -->
