--- a/projects.html
+++ b/projects.html
@@ -661,6 +661,11 @@
       <div class="footer">Made with 💚 by <u>Himadri Shah</u></div>
     </div>
 
+    <!-- Scroll to Top -->
+    <div class="scroll-to-top">
+      <i class="fas fa-chevron-circle-up" onclick="scrollToTop()"></i>
+    </div>
+
     <!-- jQuery CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
