--- a/blogs.html
+++ b/blogs.html
@@ -1,39 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta name="author" content="Himadri Shah">
-    <meta name="description" content="Personal Portfolio of Himadri Shah">
-    <meta name="keywords" content="Portfolio, Web Development">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta name="author" content="Himadri Shah" />
+    <meta name="description" content="Personal Portfolio of Himadri Shah" />
+    <meta name="keywords" content="Portfolio, Web Development" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
 
     <!-- Font Awesome Downloaded -->
-    <link rel="stylesheet" href="all.min.css">
+    <link rel="stylesheet" href="all.min.css" />
 
     <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap"
+      rel="stylesheet"
+    />
 
     <title>Blogs | Himadri Shah</title>
-</head>
+  </head>
 
-<body>
-    
+  <body>
     <nav>
-        <ul class="nav-links">
-            <li><a onclick="window.location.href='index.html'">Home</a></li>
-            <li><a onclick="window.location.href='about.html'">About</a></li>
-            <li><a onclick="window.location.href='projects.html'">Projects</a></li>
-            <li><a href="#" style="border-bottom: 2px solid var(--blue);">Blogs</a></li>
-            <!-- <li><a onclick="jumpToDiv('contact')">Contact</a></li> -->
-        </ul>
+      <ul class="nav-links">
+        <li><a onclick="window.location.href='index.html'">Home</a></li>
+        <li><a onclick="window.location.href='about.html'">About</a></li>
+        <li><a onclick="window.location.href='projects.html'">Projects</a></li>
+        <li>
+          <a href="#" style="border-bottom: 2px solid var(--blue)">Blogs</a>
+        </li>
+        <!-- <li><a onclick="jumpToDiv('contact')">Contact</a></li> -->
+      </ul>
 
-        <!-- <div class="burger">
+      <!-- <div class="burger">
             <div class="line1"></div>
             <div class="line2"></div>
             <div class="line3"></div>
@@ -41,58 +48,92 @@
     </nav>
 
     <div class="intro blog-intro">
-        <img src="./img/undraw_blog.svg" alt="Blog">
+      <img src="./img/undraw_blog.svg" alt="Blog" />
     </div>
 
     <div class="blog-section">
-        <div class="title">Checkout my blogs...</div>
+      <div class="title">Checkout my blogs...</div>
 
-        <div class="blog">
-            <div class="name">11 non-coding tools I use almost every day!</div>
+      <div class="blog">
+        <div class="name">11 non-coding tools I use almost every day!</div>
 
-            <small>July, 2021 &nbsp; <span class="mark">mark15</span></small>
+        <small>July, 2021 &nbsp; <span class="mark">mark15</span></small>
 
-            <div class="content">
-                Dev life isn't just about writing code all the time. It also includes using the apt tools and resources that can make your job easy! So, I'm gonna reveal my go-to tools/websites for a specific task that I use daily, and they make my life hassle-free. Let's dive in!
-                <br>
-                <a href="https://himadrishah.hashnode.dev/11-non-coding-tools-i-use-almost-every-day" target="_blank"><button>Hashnode<i class="fas fa-external-link-alt"></i></button></a>
-                <a href="./blog-two.html" target="_blank"><button class="read-now">Read More</button></a>
-            </div>
+        <div class="content">
+          Dev life isn't just about writing code all the time. It also includes
+          using the apt tools and resources that can make your job easy! So, I'm
+          gonna reveal my go-to tools/websites for a specific task that I use
+          daily, and they make my life hassle-free. Let's dive in!
+          <br />
+          <a
+            href="https://himadrishah.hashnode.dev/11-non-coding-tools-i-use-almost-every-day"
+            target="_blank"
+            ><button>Hashnode<i class="fas fa-external-link-alt"></i></button
+          ></a>
+          <a href="./blog-two.html" target="_blank"
+            ><button class="read-now">Read More</button></a
+          >
         </div>
+      </div>
 
-        <div class="blog">
-            <div class="name">Build a Movie App using TheMovieDb API</div>
+      <div class="blog">
+        <div class="name">Build a Movie App using TheMovieDb API</div>
 
-            <small>June, 2021 &nbsp; <span class="mark">mark15</span></small>
+        <small>June, 2021 &nbsp; <span class="mark">mark15</span></small>
 
-            <div class="content">
-                The pandemic has made us all stay indoors for most of the day, which is why we need some entertainment activities that can refresh us while continuing to stay indoors. So, I thought of building a Movie App that can give me a list of movies and their details upon searching for it.
-                <br>
-                <a href="https://himadrishah.hashnode.dev/build-a-movie-app-using-themoviedb-api" target="_blank"><button>Hashnode<i class="fas fa-external-link-alt"></i></button></a>
-                <a href="./blog-one.html" target="_blank"><button class="read-now">Read More</button></a>
-            </div>
+        <div class="content">
+          The pandemic has made us all stay indoors for most of the day, which
+          is why we need some entertainment activities that can refresh us while
+          continuing to stay indoors. So, I thought of building a Movie App that
+          can give me a list of movies and their details upon searching for it.
+          <br />
+          <a
+            href="https://himadrishah.hashnode.dev/build-a-movie-app-using-themoviedb-api"
+            target="_blank"
+            ><button>Hashnode<i class="fas fa-external-link-alt"></i></button
+          ></a>
+          <a href="./blog-one.html" target="_blank"
+            ><button class="read-now">Read More</button></a
+          >
         </div>
+      </div>
     </div>
 
     <div class="contact-section">
-        <div class="title">Connect with me!</div>
+      <div class="title">Connect with me!</div>
 
-        <div class="contact">
-            <a href="mailto: himadrishah2000@gmail.com" title="Email"><i class="fas fa-envelope-square"></i></a>
-            <a href="https://linkedin.com/in/himadri2110" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com/himadri2110" target="_blank" title="GitHub"><i class="fab fa-github-square"></i></a>
-            <a href="https://twitter.com/himadri2110" target="_blank" title="Twitter"><i class="fab fa-twitter-square"></i></a>
-        </div>
+      <div class="contact">
+        <a href="mailto: himadrishah2000@gmail.com" title="Email"
+          ><i class="fas fa-envelope-square"></i
+        ></a>
+        <a
+          href="https://linkedin.com/in/himadri2110"
+          target="_blank"
+          title="LinkedIn"
+          ><i class="fab fa-linkedin"></i
+        ></a>
+        <a href="https://github.com/himadri2110" target="_blank" title="GitHub"
+          ><i class="fab fa-github-square"></i
+        ></a>
+        <a
+          href="https://twitter.com/himadri2110"
+          target="_blank"
+          title="Twitter"
+          ><i class="fab fa-twitter-square"></i
+        ></a>
+      </div>
 
-        <div class="footer">
-            Made with 💚 by <u>Himadri Shah</u>
-        </div>
+      <div class="footer">Made with 💚 by <u>Himadri Shah</u></div>
+    </div>
+
+    <!-- Scroll to Top -->
+    <div class="scroll-to-top">
+      <i class="fas fa-chevron-circle-up" onclick="scrollToTop()"></i>
     </div>
 
     <!-- jQuery CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
     <script src="./main.js"></script>
-    
-</body>
+  </body>
 </html>
